      configurations) to correctly preserve color precision in depth 30.
    - Improved the memory allocation strategy in nvidia-modeset.ko to reduce
      the likelihood of out-of-memory errors, which typically manifest as
      "page allocation failure" messages in the kernel log.

  [ Andreas Beckmann ]
  * Update nv-readme.ids.

 -- Andreas Beckmann <anbe@debian.org>  Thu, 17 Dec 2020 16:50:20 +0100

nvidia-graphics-drivers (455.45.01-2) unstable; urgency=medium

  * Restrict watch file to releases from the 455.xx short lived branch.
  * Upload to unstable.

 -- Andreas Beckmann <anbe@debian.org>  Tue, 05 Jan 2021 16:27:49 +0100

nvidia-graphics-drivers (455.45.01-1) experimental; urgency=medium

  * New upstream short lived branch release 455.45.01 (2020-11-17).
    - Fixed an issue where Vulkan applications would fail to initialize if the
      connected X11 Server did not expose support for GLX.
    - Fixed a bug in a Vulkan blending optimization that could produce incorrect
      results. Some of the Vulkan titles affected by this bug were:
      Life is Strange 2, Shadow of the Tomb Raider.
    - Fixed an issue that caused Vulkan swapchain creation to fail for
      full-screen windows when a G-SYNC monitor is connected.
    * Supposedly fixes nvidia-uvm usability with Linux 5.9.  (Closes: #973729)

 -- Andreas Beckmann <anbe@debian.org>  Fri, 20 Nov 2020 22:12:34 +0100

nvidia-graphics-drivers (455.38-1) experimental; urgency=medium

  * New upstream short lived branch release 455.38 (2020-10-29).
    - Added support for the following GPU: GeForce RTX 3070.
    - Added support for using an NVIDIA-driven display as a PRIME Display
      Offload sink with a PRIME Display Offload source driven by the
      xf86-video-intel driver.
    - Fixed a bug in a Vulkan barrier optimization that allowed some
      back-to-back copies to run unordered.
  * New upstream release 450 series.
    - Fixed a performance regression in the NVIDIA X driver which affected