@@ -117,6 +117,7 @@ libnvidia-eglcore.so.#VERSION# #PACKAGE# #MINVER#
  _glBufferDataARB@Base 346
  _glBufferDataSysmem@Base 346
  _glBufferPageCommitmentARB@Base 346
+ _glBufferPageCommitmentMemNV@Base 460
  _glBufferStorage@Base 346
  _glBufferStorageEXT@Base 349
  _glBufferStorageMemEXT@Base 384.69
@@ -329,6 +330,7 @@ libnvidia-eglcore.so.#VERSION# #PACKAGE# #MINVER#
  _glCreateQueries@Base 346
  _glCreateRenderbuffers@Base 346
  _glCreateSamplers@Base 346
+ _glCreateSemaphoresNV@Base 460
  _glCreateShader@Base 346
  _glCreateShaderObjectARB@Base 346
  _glCreateShaderProgramEXT@Base 346
@@ -893,6 +895,7 @@ libnvidia-eglcore.so.#VERSION# #PACKAGE# #MINVER#
  _glGetSamplerParameterIuivOES@Base 349
  _glGetSamplerParameterfv@Base 346
  _glGetSamplerParameteriv@Base 346
+ _glGetSemaphoreParameterivNV@Base 460
  _glGetSemaphoreParameterui64vEXT@Base 384.69
  _glGetSeparableFilter@Base 346
  _glGetShaderInfoLog@Base 346
@@ -1410,6 +1413,7 @@ libnvidia-eglcore.so.#VERSION# #PACKAGE# #MINVER#
  _glNamedBufferDataEXT@Base 346
  _glNamedBufferPageCommitmentARB@Base 450
  _glNamedBufferPageCommitmentEXT@Base 346
+ _glNamedBufferPageCommitmentMemNV@Base 460
  _glNamedBufferStorage@Base 346
  _glNamedBufferStorageEXT@Base 346
  _glNamedBufferStorageMemEXT@Base 384.69
@@ -1892,6 +1896,7 @@ libnvidia-eglcore.so.#VERSION# #PACKAGE# #MINVER#
  _glSecondaryColorPointer@Base 346
  _glSecondaryColorPointerEXT@Base 346
  _glSelectBuffer@Base 346
+ _glSemaphoreParameterivNV@Base 460
  _glSemaphoreParameterui64vEXT@Base 384.69
  _glSeparableFilter2D@Base 346
  _glSetFenceNV@Base 346
@@ -2015,6 +2020,7 @@ libnvidia-eglcore.so.#VERSION# #PACKAGE# #MINVER#
  _glTexImage3DNV@Base 346
  _glTexPageCommitmentARB@Base 346
  _glTexPageCommitmentEXT@Base 349
+ _glTexPageCommitmentMemNV@Base 460
  _glTexParameterIiv@Base 346
  _glTexParameterIivEXT@Base 346
  _glTexParameterIivOES@Base 349
@@ -2063,6 +2069,7 @@ libnvidia-eglcore.so.#VERSION# #PACKAGE# #MINVER#
  _glTextureImage3DMultisampleCoverageNV@Base 346
  _glTextureImage3DMultisampleNV@Base 346
  _glTexturePageCommitmentEXT@Base 346
+ _glTexturePageCommitmentMemNV@Base 460
  _glTextureParameterIiv@Base 346
  _glTextureParameterIivEXT@Base 346
  _glTextureParameterIuiv@Base 346
