@@ -179,6 +179,7 @@ libnvidia-ml.so.1 #PACKAGE# #MINVER# | libnvidia-ml.so.1 #MINVER#
  nvmlDeviceSetNvLinkUtilizationControl@Base 361
  nvmlDeviceSetPersistenceMode@Base 270
  nvmlDeviceSetPowerManagementLimit@Base 304
+ nvmlDeviceSetTemperatureThreshold@Base 460
  nvmlDeviceSetVirtualizationMode@Base 361.28
  nvmlDeviceValidateInforom@Base 304
  nvmlErrorString@Base 280
@@ -204,6 +205,7 @@ libnvidia-ml.so.1 #PACKAGE# #MINVER# | libnvidia-ml.so.1 #MINVER#
  nvmlInitWithFlags@Base 384.90
  nvmlInit_v2@Base 319
  nvmlInternalGetExportTable@Base 280
+ nvmlRetry_NvRmControl@Base 460
  nvmlSetVgpuVersion@Base 410.66
  nvmlShutdown@Base 270
  nvmlSystemGetCudaDriverVersion@Base 378
@@ -237,6 +239,7 @@ libnvidia-ml.so.1 #PACKAGE# #MINVER# | libnvidia-ml.so.1 #MINVER#
  nvmlVgpuInstanceGetFbUsage@Base 367.27
 #MISSING: 375# nvmlVgpuInstanceGetFbUtilization@Base 370
  nvmlVgpuInstanceGetFrameRateLimit@Base 375
+ nvmlVgpuInstanceGetGpuInstanceId@Base 460
 #MISSING: 375# nvmlVgpuInstanceGetGpuUtilization@Base 370
  nvmlVgpuInstanceGetLicenseStatus@Base 375
  nvmlVgpuInstanceGetMdevUUID@Base 440.59
